* RCEvent now extracts botflag aswell. Making it possible to detect (and return)
  botedits in ReactToRCEvent without a database connection (ie.
  calling classifyEditor). This decreases delay/lag on busy wikis noticeably.
* Adding Console.msgs and sqlite3.dll as Content includes. No longer have to be
  moved manually before the app can be run.

=== New features in 1.20.0 ===
* (JIRA SWMTBOT-12) Trim whitespace around parameter when dealing with ListManager.
* (JIRA SWMTBOT-29) New feed filters added: feedFilterUsersAnon, feedFilterUsersReg
  feedFilterUsersBot, feedFilterEventMinorEdit, feedFilterEventEdit, 
  feedFilterEventNewpage, feedFilterEventMove, feedFilterEventDelete, 
  feedFilterEventNewuser, feedFilterEventUpload and feedFilterEventProtect.
  These can be set in SWMTBot.ini to 1, 2, 3 or 4.
  Check the bug ticket and code comments for more info.
* (JIRA SWMTBOT-30) New option to prevent dbconnection in ListManager.ClassifyEditor
  Can now be done by adding setting disableClassifyEditor in SWMTBot.ini.
* (JIRA SWMTBOT-27) New command "config" for getting the customizable .ini settings
  optional parameter 'all' to broadcast it (like "count" does by default)
  causing all other bots in the same channel to also show their configs.

=== Bug fixes in 1.20.0 ===
* SWMTUtils.wikiEncode() now encodes exclamation mark aswell (some IRC clients
  cut off links that ends with it).
* (JIRA SWMTBOT-11) added missing clean-attributes for EventType edit and newpage 
* (JIRA SWMTBOT-16) Remove deprecated {ipcat}.
* added "patrol" (mark as patrolled) and "review" (FlaggedRevs/PendingChanges)
  as an empty switchcase in RCReader->rcirc_OnChannelMessage to clear out some
  unnecessary WARNs about unhandled log types.
* (JIRA SWMTBOT-6) Pagetitles containing a slash were not reported
  and cause a WARN in log.
* nsEnglish[4] and nsEnglish[5] have been changed from "Wikipedia" to "Project"
  to fix the bug where one could watchlist project-ns page of a non-WP project,